# local-voiceai

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  UPGRADE.md  bot.py  dev_log.py  docker-compose.mcp-searx.yml  docker-compose.yml  kokoro_tts.py  main_mcp.py  pyproject.toml  run.sh
config/: mcp.json  mcp_k8s.json  mcp_sse.json  mcp_unit_convertor.json
docker/: Dockerfile.mcp  Dockerfile.voice
examples/k8s/: multi-mcp.yaml
mcp/searx/config/: settings.yml
scripts/: check_system.sh
src/multimcp/: mcp_client.py  multi_mcp.py
src/utils/: logger.py
tests/: e2e_test.py  k8s_test.py  lifecycle_test.py
tools/: screenshot.py  search.py
